src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --text-primary: black;
    --text-secondary:#7E7E7E;
    --text-light: #8b929d;
    --text-sale: #bf0000;
    --text-white: white;
    
    --color-button: #202020;
    --color-hover: #cf8562;
    
    --color-border01: #efefef;
    --color-border02: #f7f7f7a6;
    --color-border03: #8b929c73;
    
    --color-bg01: #f7ebe0;
    --color-bg02: white;
    --color-bg03: var(--color-button);
    --color-bg04: var(--color-border01);

  }
}



@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');

.hero-title{
    line-height: 3.3rem !important;
}


ul.slick-dots.slick-thumb {
  display: flex !important;
  flex-direction: row;
  justify-content: center;
}

.slick-dots.slick-thumb li {
  width: 6px;
  height: 6px;
  margin: 0 3px;
  border-radius: 999px;
  transition: all 0.5s ease-in-out;
  will-change: width;
  background-color: rgb(200, 200, 200);
}

.slick-dots.slick-thumb li.slick-active {
  background-color: rgb(0, 0, 0);
  width: 24px;
}

.slick-prev::before, .slick-next::before{
  display: none;
}

.slick-arrow{
  background-color: var(--color-border02);
}

.slick-arrow.slick-next,
.slick-arrow.slick-prev{
  height:0;
  width: 0;
}

/* @media (min-width: 1200px) {
  .prev-arrow {
    left: calc((100% - 1200px) / 2 - 10px) !important;
    z-index: 1 !important;
    display: block !important;
  }

  .next-arrow {
    display: block !important;
    right: calc((100% - 1200px) / 2 - 30px) !important;
    z-index: 1 !important;
  }
}

@media (min-width: 1400px) {
  .prev-arrow {
    display: block !important;
    left: calc((100% - 1400px) / 2 - 40px) !important;
    z-index: 1 !important;
  }

  .next-arrow {
    display: block !important;
    right: calc((100% - 1400px) / 2 - 40px) !important;
    z-index: 1 !important;
  }
}

@media (min-width: 1600px) {
  .prev-arrow {
    display: block !important;
    left: calc((100% - 1600px) / 2 - 50px) !important;
    z-index: 1 !important;
  }

  .next-arrow {
    display: block !important;
    right: calc((100% - 1600px) / 2 - 50px) !important;
    z-index: 1 !important;
  }
} */


.angry-grid {
  display: grid; 
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  gap: 0px;
  height: 100%;
  width: 100%;
}

#item-0, #item-1, #item-2, #item-3, #item-4, #item-5, #item-6 {
  height: 100%;
  object-fit: cover;
}

#item-0 {
  grid-row-start: 1;
  grid-column-start: 1;
  grid-row-end: 2;
  grid-column-end: 2;
}

#item-1 {
  grid-row-start: 1;
  grid-column-start: 2;
  grid-row-end: 2;
  grid-column-end: 3;
}

#item-2 {
  grid-row-start: 2;
  grid-column-start: 1;
  grid-row-end: 3;
  grid-column-end: 2;
}

#item-3 {
  grid-row-start: 2;
  grid-column-start: 2;
  grid-row-end: 3;
  grid-column-end: 3;
}

#item-4 {
  height: 100%;
  object-fit: cover;
  grid-row-start: 1;
  grid-column-start: 3;
  grid-row-end: 3;
  grid-column-end: 5;
}

#item-5 {
  grid-row-start: 1;
  grid-column-start: 5;
  grid-row-end: 2;
  grid-column-end: 6;
}

#item-6 {
  grid-row-start: 2;
  grid-column-start: 5;
  grid-row-end: 3;
  grid-column-end: 6;
}

@media (max-width: 1024px) {
  .angry-grid {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    min-width: 1024px; /* Ensures grid maintains width */
    overflow-x: auto; /* Horizontal scrolling */
    overflow-y: hidden; /* Prevent vertical scrolling */
  }

  /* Adjust item heights to maintain visibility on small screens */
  #item-0, #item-1, #item-2, #item-3, #item-5, #item-6 {
    height: 200px; /* Adjust height as needed */
    object-fit: cover;
  }

  #item-4 {
    height: 400px; /* Larger image */
    object-fit: cover;
  }
  .ig-container {
    width: 100%;
    overflow-x: auto; /* Ensure the parent container allows scrolling */
  }
}

.tips-overlay {
  position: absolute;
  inset: 0; /* This positions the overlay to cover the entire parent container */
  background: linear-gradient(to top, rgba(0, 0, 0, 0.46), transparent);
  border-radius: 8px;
}
.scrollbar-hide {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;  /* Chrome, Safari and Opera */
}
thin-scrollbar::-webkit-scrollbar {
  width: 10px;
}

thin-scrollbar::-webkit-scrollbar-track {
  background: rgb(179, 177, 177);
  border-radius: 10px;
}

thin-scrollbar::-webkit-scrollbar-thumb {
  background: rgb(136, 136, 136);
  border-radius: 10px;
}

thin-scrollbar::-webkit-scrollbar-thumb:hover {
  background: rgb(100, 100, 100);
  border-radius: 10px;
}

thin-scrollbar::-webkit-scrollbar-thumb:active {
  background: rgb(68, 68, 68);
  border-radius: 10px;
}

